tdf#119087 Don't treat OOXML strict namespace as custom XML

Change-Id: I5037ac09f57c92e02e330cbc906da3afbe4c747c